# advent2022

./: advent2024.cabal  day1.hs  day2.hs
app/: Main.hs  day1.hs  day3.hs  day4.hs
