cabal-version:      3.4
name:               advent2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Natalie
maintainer:         devnat212@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent2024
    import:           warnings
    main-is:          day4.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      regex-tdfa ^>= 1.3.2,
                      extra >=1.8
    hs-source-dirs:   app
    default-language: Haskell2010
    

